--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,14 @@
-amqp==5.0.6
 asgiref==3.4.1
-billiard==3.6.4.0
-celery==5.1.2
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.2.0
+braintree==4.10.0
+certifi==2021.5.30
+chardet==4.0.0
 coverage==5.5
 Django==3.2.5
 django-environ==0.4.5
-kombu==5.1.0
+idna==2.10
 Pillow==8.3.1
-prompt-toolkit==3.0.19
 psycopg2==2.9.1
 pytz==2021.1
-six==1.16.0
+requests==2.25.1
 sqlparse==0.4.1
-vine==5.0.0
-wcwidth==0.2.5
+urllib3==1.26.6
