Generating PDF invoices dynamically via weasyPrint

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 asgiref==3.4.1
 braintree==4.10.0
+cairocffi==1.2.0
+CairoSVG==2.5.2
 certifi==2021.5.30
+cffi==1.14.6
 chardet==4.0.0
 coverage==5.5
+cssselect2==0.4.1
+defusedxml==0.7.1
 Django==3.2.5
 django-environ==0.4.5
+html5lib==1.1
 idna==2.10
 Pillow==8.3.1
 psycopg2==2.9.1
+pycparser==2.20
+pyphen==0.11.0
 pytz==2021.1
 requests==2.25.1
+six==1.16.0
 sqlparse==0.4.1
+tinycss2==1.1.0
 urllib3==1.26.6
+WeasyPrint==52.5
+webencodings==0.5.1
